k8s/gateway/postman-echo-svc-ext.yaml
apiVersion: v1
kind: Service
metadata:
  name: postman-echo-ext
spec:
  type: ExternalName
  externalName: postman-echo.com
  ports:
    - name: http
      port: 80
      targetPort: 80
    - name: https
      port: 443
      targetPort: 443
