k8s/gateway/postman-echo-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: postman-echo
spec:
  selector:
    gateway.networking.k8s.io/gateway-name: egress-gateway
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
    - name: https
      protocol: TCP
      port: 443
      targetPort: 443
  clusterIP: None
