k8s/gateway/postman-echo-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: postman-echo-http-route
spec:
  hostnames:
    - postman-echo.mesh-test.svc.cluster.local
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: egress-gateway
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: postman-echo-ext
          port: 80
      matches:
        - path:
            type: PathPrefix
            value: /
